data/derived/sp14/progs/unify/prog3339.ml.out
Characters 89-106:
  | Sine     (e1) -> sin(pi *. (exprToString e1))
                               ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
